--- a/app/assets/stylesheets/partials/_application.css.scss
+++ b/app/assets/stylesheets/partials/_application.css.scss
@@ -6,21 +6,23 @@ html {
 body {
   height: 100%;
   color: $bodycolor;
-  font: normal #{$fontsize}/#{$lineheight} $serif;
+  font: normal #{$fontsize}/#{$lineheight} $sans;
+  background: url('bg01.png') right 0 no-repeat $purple;
 
-  .vertical-wrapper, .horizontal-wrapper {
-    position: relative;
-    float: left;
-    margin-left: $main-nav-width;
-    z-index: 2;
-  }
+  // .vertical-wrapper, .horizontal-wrapper {
+  //   position: relative;
+  //   float: left;
+  //   margin-left: $main-nav-width;
+  //   z-index: 2;
+  //   background: rgba(0, 0, 0, 0.8);
+  // }
 
-  .vertical-wrapper {
-  }
+  // .vertical-wrapper {
+  // }
 
-  .horizontal-wrapper {
-    width: 2000px;
-  }
+  // .horizontal-wrapper {
+  //   width: 2000px;
+  // }
 }
 
 /* Text and image selection styling */
@@ -93,7 +95,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.984em;
+  font-size: 1.05em;
   line-height: $lineheight*2;
   margin-bottom: ceil($lineheight / 2);
 }
