--- a/app/assets/stylesheets/partials/main_nav.css.scss
+++ b/app/assets/stylesheets/partials/main_nav.css.scss
@@ -1,29 +1,42 @@
-body {
+.main-nav {
+  @include columns(3);
+  @include alpha;
+  margin-right: 0;
+  height: 100%;
+  background-color: $purple;
+  
+  .logo {
+    display: block;
+    margin: 55px 0;
+    text-align: center;
+  }
+  .menu {
+    margin: 0 0 80px;
+    padding: 0 21%;
+    li {
+      display: block;
+      height: auto;
+      color: #C4BFB8;
+      border-top: 1px solid rgba(255, 255, 255, 0.5);
 
-  .main-nav {
-    position: fixed;
-    width: $main-nav-width;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: $brown;
-    z-index: 3;
-
-    .menu {
-      margin-top: 80px;
-      margin-left: 50px;
-
-      li {
-        display: block;
-        height: 30px;
-        width: 150px;
+      a, a:active, a:visited {
         color: #C4BFB8;
-        border-top: 1px solid #C4BFB8;
-
-        a, a:active, a:visited {
-          color: #C4BFB8;
-        }
+        text-decoration: none;
+        font-size: 11px;
       }
     }
   }
+  footer{
+    margin: 0 21%;
+    line-height: 15px;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    padding-top: 20px;
+    p, ul{
+      font-size: 9px;
+    }
+    ul{
+      margin-top: 20px;
+    }
+  }
 }
+
